--- a/src/components/input-container/input-container.html
+++ b/src/components/input-container/input-container.html
@@ -28,11 +28,11 @@
               <div *ngIf="!dataElement.optionSet" [ngClass]="(dataValuesSavingStatusClass[dataElement.id +'-'+categoryOptionCombo.id])?dataValuesSavingStatusClass[dataElement.id +'-'+categoryOptionCombo.id]:'input-field-container'">
                 <div *ngIf="textInputField.indexOf(dataElement.valueType) > -1">
                   <text-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
-                    [data]="data" [dataEntrySettings]="dataEntrySettings" [valueType]="dataElement.valueType"></text-input-field>
+                    [data]="data" [barcodeSettings]="barcodeSettings" [valueType]="dataElement.valueType"></text-input-field>
                 </div>
                 <div *ngIf="numericalInputField.indexOf(dataElement.valueType) > -1">
                   <numerical-input-field (onChange)="updateValue($event)" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
-                    [data]="data" [dataEntrySettings]="dataEntrySettings" [valueType]="dataElement.valueType"></numerical-input-field>
+                    [data]="data" [barcodeSettings]="barcodeSettings" [valueType]="dataElement.valueType"></numerical-input-field>
                 </div>
                 <div *ngIf="dataElement.valueType === 'DATE' || dataElement.valueType === 'DATETIME' || dataElement.valueType === 'TIME' ">
                   <date-input-field (onChange)="updateValue($event)" [valueType]="dataElement.valueType" [dataElementId]="dataElement.id" [categoryOptionComboId]="categoryOptionCombo.id"
